# muse

./: .env.example  .gitignore  LICENSE  README.md  model_list.txt  pyproject.toml  test_list.md
configs/: default.json  openrouter_eval.json
docs/: experiment_record.md  metric_notes.md
scripts/: build_hf_dataset.py  build_report_viewer.py  export_overleaf_tables_from_viewer.py  generate_gemini_batch_rubrics.py  generate_taxonomy_rubrics.py  rerun_llm_judge_parallel.py
scripts/bench_evaluate/: build_human_eval.py  generate_latex_tables.py  generate_latex_tables_gemini.py  package_share.py
scripts/bench_step3/: agreement_three_judges.py  build_human_eval.py  build_human_eval_claude.py  build_human_eval_gpt4o.py  build_viewer.py
src/judge_system/: __init__.py  cli.py  config.py  data_prep.py  drawings.py  geometry_metrics.py  llm_judge.py  pipeline.py  prompts.py  providers.py  render_only_cases.txt  report_viewer.py  reverse_cli.py  reverse_pipeline.py  rubric.py  sandbox.py  svg_metrics.py  task_plan_inference.py
src/judge_system/prompts/: generate_rubrics.py  generate_rubrics_pair.py  generate_rubrics_pair_oldversion.py  generate_score.py  generate_task.py  generate_task_example.py
